openapi generation for social backend, docker-compose updated, small frontend changes
