# social-site-frontend/src/app/api/models/login-details-dto.ts
@@ -2,7 +2,7 @@
 /* eslint-disable */
 import { UserDetailsDto } from './user-details-dto';
 export interface LoginDetailsDto {
-  accessToken?: string;
-  refreshToken?: string;
-  userDetails?: UserDetailsDto;
+  accessToken: string;
+  refreshToken: string;
+  userDetails: UserDetailsDto;
 }
