# social-site-frontend/src/app/api/models/register-dto.ts
@@ -1,10 +1,10 @@
 /* tslint:disable */
 /* eslint-disable */
 export interface RegisterDto {
-  confirmPassword?: string;
-  email?: string;
-  firstname?: string;
-  lastname?: string;
-  password?: string;
-  username?: string;
+  confirmPassword: string;
+  email: string;
+  firstname: string;
+  lastname: string;
+  password: string;
+  username: string;
 }
