# social-site-frontend/src/app/api/models/update-user-dto.ts
@@ -2,9 +2,9 @@
 /* eslint-disable */
 export interface UpdateUserDto {
   confirmpassword?: string;
-  email?: string;
-  firstname?: string;
-  lastname?: string;
+  email: string;
+  firstname: string;
+  lastname: string;
   newpassword?: string;
   oldpassword?: string;
 }
