# social-site-frontend/src/app/api/models/user-details-dto.ts
@@ -1,9 +1,9 @@
 /* tslint:disable */
 /* eslint-disable */
 export interface UserDetailsDto {
-  email?: string;
-  firstname?: string;
-  id?: number;
-  lastname?: string;
-  username?: string;
+  email: string;
+  firstname: string;
+  id: number;
+  lastname: string;
+  username: string;
 }
